 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

GLOBAL NEWS - User visible changes.
At least, you had better search '[INCOMPATIBLE CHANGES]' for each version.

Version *.* - ,**********, by Shigio Yamaguchi

* DJGPP support added.

Version 4.2 - Nov 24 2001, by Shigio Yamaguchi

* postgres support added.
  You need to configure GLOBAL with --with-postgres option.
* gtags: when no parser specified in config file, overloaded by default values.
* gtags: variable 'skip' accept full path name.
* htags: changed to refer to macros which is defined in other C source.
* htags: --caution option added.
* global.texi: reference manual added.
* gtags, htags: allow relative path name for --gtagsconf.

Version 4.1.1 - July 31, 2001, by Shigio Yamaguchi

* htags: bug fixed. bless.sh removed 'TARGET=mains'.
* htags: bug fixed. bless.sh didn't work without config file.
* configure: bug fixed. --srcdir option didn't work.
  now you can build project at any directory other than source directory.
* htags: generates rebuild.sh to redo the job with the previous context.
* globash.rc: when GTAGSROOT specified, prompt is changed to "[$root]!$cwd"
  instead of "[$root]/...".
* globash.rc: bug fixed. number was ignored in 'next <no>' and 'prev <no>'.
* globash.rc: The -e option of show use emacsclient instead of emacs.

Version 4.1 - July 12, 2001, by Shigio Yamaguchi

[INCOMPATIBLE CHANGES]

* global: rename the -i(incremental) option to -u(update) and the new
  -i(--ignore-case) option added because -i options is generally used
  for this purpose (see grep(1)).
* gtags.conf: rename global.conf into gtags.conf because the old name was
  too generic. (GLOBAL also accepts old name for compatibility.)

[OTHER CHANGES]

* Some bugs are fixed.
* globash.rc: GloBash --- Global facility for Bash added.
* htags: create bless.sh when the -S option specified.