@@ -23,6 +23,7 @@ At least, you had better search '[INCOMPATIBLE CHANGES]' for each version.
 Version *.* - ,**********, by Shigio Yamaguchi
 
 * DJGPP support added.
+* global,gtags: the -q option added.
 
 Version 4.2 - Nov 24 2001, by Shigio Yamaguchi
 
